<resources>
    <string name="app_name">Caravan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_thanks">No, Thanks</string>
    <string name="yes_sure">Yes, Sure</string>
    <string name="ok">OK</string>
    <string name="get_started">Get Started</string>
    <string name="str_continue">Continue</string>
    <string name="intro_text_1">Get Inspiration \nfor your next trip</string>
    <string name="intro_desc_1">We’re happy to share our best tips for destinations where you can relax. But you find the nicest city trips as well!</string>
    <string name="intro_text_2">Find best place\nfor your journey</string>
    <string name="intro_desc_2">We live in a wonderful world that is full of beauty, charm and adventure.</string>
    <string name="intro_text_3"><![CDATA[Pack your bag &\ntravel with Caravan]]></string>
    <string name="intro_desc_3">A journey of a thousand miles begins with a single step</string>
    <string name="top_guides_in_uzbekistan">Top Guides in Uzbekistan</string>
    <string name="trending_trips">Trending Trips</string>
    <string name="have_been_searched_by_many_people_so_far">Have been searched by many people so far</string>

    <!--    for login-->
    <string name="str_enter_email">Enter your email</string>
    <string name="str_choose_birthday">Choose your birthday.</string>
    <string name="str_enter_phone">Enter your phone number.</string>
    <string name="str_verify_phone">Verify your phone number.</string>
    <string name="str_fill_number">Fill the field to continue</string>
    <string name="str_get_code">Get Code</string>
    <string name="str_agreement">I agree to the Terms &amp; Conditions</string>
    <string name="str_confirm">Confirm</string>
    <string name="str_resend_code">Resend Code</string>
    <string name="str_fill_information">Fill your information</string>
    <string name="str_enter_name">Enter your name</string>
    <string name="str_choose_gender">Choose your gender</string>
    <string name="str_gender_male">MALE</string>
    <string name="str_gender_female">FEMALE</string>
    <string name="str_save">Save</string>
    <string name="str_lowwer_male">Male</string>
    <string name="str_lowwer_female">Female</string>
    <string name="str_enter_surname">Enter your surname</string>
    <string name="str_enter_code">Please enter the code</string>
    <string name="str_phone_number">Phone Number</string>
    <string name="str_check_agreement">Please check Agreement</string>
    <string name="str_fill_all_fields">Please fill all fields</string>
    <string name="str_url_agreement">https://matyaqubovdev.github.io/caravan-policy</string>
    <string name="str_url_get_info">https://t.me/OgabekDev</string>
    <string name="str_gender">Gender</string>
    <string name="str_male">Male</string>
    <string name="str_female">Female</string>
    <string name="str_all">All</string>
    <string name="str_guide">Guide</string>
    <string name="str_trip">Trip</string>
    <string name="trial_text">Bukhara is a very beautiful city in Uzbekistan. You must like there if you came. I give you that opportunity to discover Bukhara. In this trip you can customise the trip days where to visit. Add more like opportunites. Take me and discover Bukhara</string>
    <string name="travel_locations">Travel Locations</string>
    <string name="facilities">Facilities</string>
    <string name="guide_s_profile_and_contact_details">Guide\'s Profile &amp; Contact Details</string>
    <string name="apply_trip">Apply Trip</string>
    <string name="chat_with_guide">Chat with Guide</string>
    <string name="call_to_guide">Call to Guide</string>
    <string name="reviews">Reviews</string>
    <string name="str_delete_account">Delete Account</string>
    <string name="str_my_feedbacks">My Feedbacks</string>
    <string name="str_logout_message">Are you sure to Log out?</string>
    <string name="str_delete_message">Are you sure to Delete your Account?</string>
    <string name="tap_to_change_profile_photo">Tap to change profile photo</string>
    <string name="str_guides_trips">Guide\'s Trips</string>
    <string name="str_save_message">Your information has been saved to your account. You can change it anytime.</string>
    <string name="str_saved">Saved</string>

    <string name="str_send">Send</string>
    <string name="guide_s_trips">Guide\'s Trips</string>
    <string name="hire_guide">Hire Guide</string>
    <string name="write_review">Write Review</string>
    <string name="str_english">English</string>
    <string name="str_uzbek">O\'zbekcha</string>
    <string name="str_choose_language">Choose Language</string>
    <string name="str_isHiring">Are you ready to get tourists?</string>
    <string name="str_edit_guide_profile">Edit Guide Profile</string>
    <string name="str_register_as_a_guide">Register as a Guide</string>
    <string name="str_my_trips">My Trips</string>
    <string name="str_get_more_information_about_guide">Get more information about Guide</string>
    <string name="str_no_connection">No Connection</string>
    <string name="str_try_again">No Connection with our server. Please try again.</string>
    <string name="str_guide_option">Guide Option</string>
    <string name="str_is_hiring">Is Hiring</string>
    <string name="str_delete_guide_mode">Delete Guide Mode</string>
    <string name="str_fill_your_information">Fill your information</string>
    <string name="str_fill_the_field_to_continue">Fill the field to continue</string>
    <string name="str_fullname">Fullname</string>
    <string name="str_second_phone_number">Second phone number (optional)</string>
    <string name="str_enter_your_email">Enter your email</string>
    <string name="str_enter_your_birth_date_dd_mm_yyyy">Enter your birth date (dd.mm.yyyy)</string>
    <string name="str_next">Next</string>
    <string name="str_fill_your_guide">Fill in the information about the guide</string>
    <string name="str_travel_locations">Travel locations</string>
    <string name="str_location">Location</string>
    <string name="str_short_information">Short information</string>
    <string name="str_add_more">Add More</string>
    <string name="str_price">Price</string>
    <string name="str_amount">Amount</string>
    <string name="str_language">Language</string>
    <string name="str_describe_yourself">Describe yourself</string>
    <string name="str_write_more_information_about_yourself">Write more information about yourself</string>
    <string name="str_done">Done</string>
    <string name="str_fill_your_trip">Fill in the information about the Trip</string>
    <string name="str_name">Name</string>
    <string name="str_trip_s_name">Trip\'s name</string>
    <string name="str_locations">Locations</string>
    <string name="str_people">People</string>
    <string name="str_min">Min</string>
    <string name="str_max">Max</string>
    <string name="str_upload_photos_min_2_max_5">Upload photos (Min: 2, Max: 5)</string>
    <string name="str_facility">Facility</string>
    <string name="str_title">Title</string>
    <string name="str_description">Description</string>
    <string name="str_add_image">Add Image</string>
    <string name="str_upload_photo">Upload Photo</string>
    <string name="str_fill_the_location_of_that_picture">Fill in information about photo</string>
    <string name="str_upload">Upload</string>
    <string name="error">Error</string>
    <string name="went_wrong">Something went wrong. Please try again</string>
    <string name="str_send_message">Please write review</string>
    <string name="maximum_rating">Maximum Rating (0–5)</string>
    <string name="minimum_rating">Minimum Rating (0–5)</string>
    <string name="day">Day</string>
    <string name="maximum_people">Maximum People</string>
    <string name="minimum_people">Minimum People</string>
    <string name="maximum_price">Maximum Price</string>
    <string name="minimum_price">Minimum Price</string>
    <string name="filter_your_search">Filter your Search</string>
    <string name="warning">Warning</string>
    <string name="check_gender">Please check your gender</string>
    <string name="str_minimum_price">Minimum Price</string>
    <string name="str_maximum_price">Maximum Price</string>
    <string name="str_search">Search</string>
    <string name="str_length">Length</string>
    <string name="str_trip_days_1_10">Trip Days</string>
    <string name="str_compleate_create">Your trip has been created</string>
    <string name="hour">Hour</string>
    <string name="person">Person</string>
    <string name="describe_your_trip">Describe your Trip</string>
    <string name="no_trips_available">No Trips Available!</string>
    <string name="search_some_places">Search places</string>
    <string name="str_incorrect_code">Incorrect Code</string>
    <string name="str_try_code">The code you entered is incorrect. Please try again</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log out</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="account">Account</string>

    <string-array name="location">
        <item>TASHKENT</item>
        <item>SAMARKAND</item>
        <item>KHOREZM</item>
        <item>BUKHARA</item>
        <item>NAMANGAN</item>
        <item>FERGANA</item>
        <item>ANDIJAN</item>
        <item>SIRDARYA</item>
        <item>KASHKADARYA</item>
        <item>SURKHANDARYA</item>
        <item>NAVOIY</item>
        <item>JIZZAKH</item>
        <item>RESPUBLIC_OF_KARAKALPAKISTAN</item>
    </string-array>

    <string-array name="languages">
        <item>ENGLISH</item>
        <item>UZBEK</item>
        <item>RUSSIAN</item>
    </string-array>

    <string-array name="level">
        <item>BEGINNER</item>
        <item>ELEMENTARY</item>
        <item>INTERMEDIATE</item>
        <item>ADVANCED</item>
        <item>NATIVE</item>
    </string-array>

    <string-array name="currencies">
        <item>USD</item>
        <item>UZS</item>
    </string-array>

    <string-array name="options">
        <item>DAY</item>
        <item>HOUR</item>
        <item>PERSON</item>
        <item>TRIP</item>
    </string-array>



</resources>