<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:apps="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activity.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        apps:layout_constraintTop_toTopOf="parent"
        apps:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_fill_information"
            android:textColor="@color/main_color"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/str_fill_number"
            android:textSize="14sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="38dp"
            android:backgroundTint="@color/main_color"
            android:drawableEnd="@drawable/ic_user"
            android:hint="@string/str_enter_name"
            android:maxLength="13"
            android:padding="14dp"
            android:singleLine="true"
            android:inputType="textPersonName"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/etSurname"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="0dp"
            android:backgroundTint="@color/main_color"
            android:drawableEnd="@drawable/ic_user"
            android:hint="@string/str_enter_surname"
            android:maxLength="13"
            android:maxLines="1"
            android:padding="14dp"
            android:singleLine="true"
            android:textColorHint="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/str_choose_gender"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:text="@string/str_lowwer_male" />

                    <CheckBox
                        android:id="@+id/checkboxMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/main_color" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="0dp"
                        android:text="@string/str_lowwer_female" />

                    <CheckBox
                        android:id="@+id/checkboxFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/main_color" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/button_rounded"
            android:text="@string/str_save"
            android:layout_marginBottom="40dp"
            android:textAllCaps="false"
            apps:backgroundTint="@null" />

        <LinearLayout
            android:id="@+id/llAgreement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible">

            <CheckBox
                android:id="@+id/checkbox"
                android:buttonTint="@color/main_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false" />

            <TextView
                android:id="@+id/tvAgreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_agreement"
                android:textColorLink="@color/main_color" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>