<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.edit.EditProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivGuide"
            android:layout_width="156dp"
            android:layout_height="156dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/default_profile"
            app:elevation="15dp"
            app:shapeAppearanceOverlay="@style/circle" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/circular_std_bold"
            android:gravity="center"
            android:text="@string/tap_to_change_profile_photo"
            android:textColor="@color/black_60"
            android:textSize="14sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@drawable/background_dialog_trip"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/etFirstname"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="38dp"
            android:backgroundTint="@color/main_color"
            android:drawableEnd="@drawable/ic_user"
            android:hint="@string/str_enter_name"
            android:inputType="textPersonName"
            android:padding="14dp"
            android:singleLine="true"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/etSurname"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="0dp"
            android:backgroundTint="@color/main_color"
            android:drawableEnd="@drawable/ic_user"
            android:hint="@string/str_enter_surname"
            android:maxLines="1"
            android:padding="14dp"
            android:singleLine="true"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="0dp"
            android:backgroundTint="@color/main_color"
            android:digits="0123456789+"
            android:drawableEnd="@drawable/ic_phone"
            android:hint="@string/str_enter_phone"
            android:inputType="phone"
            android:maxLength="13"
            android:maxLines="1"
            android:padding="14dp"
            android:singleLine="true"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="0dp"
            android:backgroundTint="@color/main_color"
            android:drawableEnd="@drawable/ic_email"
            android:hint="@string/str_enter_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="14dp"
            android:singleLine="true"
            android:textColorHint="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/str_choose_gender"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:text="@string/str_lowwer_male" />

                    <CheckBox
                        android:id="@+id/checkboxMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/main_color" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="0dp"
                        android:text="@string/str_lowwer_female" />

                    <CheckBox
                        android:id="@+id/checkboxFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/main_color" />

                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.2dp"
            android:background="#0D121212" />

        <LinearLayout
            android:id="@+id/llCalendar"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvBirthday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_choose_birthday"

                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:src="@drawable/ic_calendar" />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1.2dp"
            android:background="#0D121212" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/button_rounded"
                android:text="@string/str_save"
                android:textAllCaps="false"
                app:backgroundTint="@null" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>