<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:apps="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".ui.activity.LoginActivity">


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_enter_phone"
        android:textColor="@color/main_color"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textStyle="bold"
        android:text="@string/str_fill_number"
        android:textSize="14sp" />


    <EditText
        android:id="@+id/etPhone"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="38dp"
        android:backgroundTint="@color/main_color"
        android:digits="0123456789+"
        android:drawableEnd="@drawable/ic_phone"
        android:hint="@string/str_phone_number"
        android:inputType="phone"
        android:maxLength="13"
        android:padding="14dp"
        android:text="+998"
        android:textColorHint="@color/black" />

<!--    <LinearLayout-->
<!--        android:id="@+id/llOtp"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="118dp"-->
<!--        android:layout_marginTop="36dp"-->
<!--        android:gravity="center"-->
<!--        android:orientation="vertical"-->
<!--        android:visibility="invisible">-->

<!--        <com.chaos.view.PinView-->
<!--            android:id="@+id/etOTP"-->
<!--            style="@style/PinWidget.PinView"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:inputType="number"-->
<!--            android:textColor="@color/main_color"-->
<!--            apps:cursorColor="@color/main_color"-->
<!--            apps:hideLineWhenFilled="false"-->
<!--            apps:itemCount="6"-->
<!--            apps:itemHeight="40dp"-->
<!--            apps:itemRadius="4dp"-->
<!--            apps:itemSpacing="10dp"-->
<!--            apps:itemWidth="40dp"-->
<!--            apps:lineWidth="2dp" />-->

<!--        <LinearLayout-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginVertical="25dp"-->
<!--            android:orientation="horizontal">-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Didn’t receive code?"-->
<!--                android:textSize="14sp" />-->

<!--            <TextView-->
<!--                android:id="@+id/tvTime"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="10dp"-->
<!--                android:text="2:58"-->
<!--                android:textColor="@color/main_color"-->
<!--                android:textSize="14sp" />-->

<!--        </LinearLayout>-->

<!--    </LinearLayout>-->

    <Button
        android:id="@+id/btnGetCode"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/button_rounded"
        android:text="@string/str_continue"
        android:textAllCaps="false"
        apps:backgroundTint="@null" />



</LinearLayout>